# dns-smtp-email-validator

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
dns_smtp_email_validator/: __init__.py  main.py  main_types.py
dns_smtp_email_validator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test.py
